apps/traggo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traggo
  namespace: traggo
  labels:
    app.kubernetes.io/name: traggo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: traggo
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: traggo
    spec:
      containers:
        - name: traggo
          image: traggo/server:latest
          ports:
            - name: http
              containerPort: 3030
              protocol: TCP
          volumeMounts:
            - mountPath: /opt/traggo/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: traggo-data
