apps/traggo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traggo
  namespace: traggo
  labels:
    app.kubernetes.io/name: traggo
spec:
  selector:
    app.kubernetes.io/name: traggo
  ports:
    - port: 3030
      targetPort: 3030
